Convert html contents into JavaScript objects

--- a/index.html
+++ b/index.html
@@ -57,158 +57,162 @@
         <h2 class="recent-works">My Recent Works</h2>
         <hr class="inline-hr">
       </div>
-      
-      <div class="multi-post">
-        <img class="hype-img" src="images/hype-project.png" alt="project sample">
-        <div class="hype-container">  
-          <h3 class="hype-pro sub-pro">Multi-Post Stories</h3>
-          <p class="normal hype-pro">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
-            took a standard dummy text.
-          </p>
-          <ul class="tech custom-tech">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
-          <button id="hype-btn" type="submit">See Project</button>
+    </div>
+    <div class="testNet"></div>
+      <div class="container" id="project-container">
+      <div class="project-details">
+        <div class="multi-post">
+          <img class="hype-img" src="images/hype-project.png" alt="project sample">
+          <div class="hype-container">  
+            <h3 class="hype-pro sub-pro">Multi-Post Stories</h3>
+            <p class="normal hype-pro">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+              took a standard dummy text.
+            </p>
+            <ul class="tech custom-tech">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+            <button id="hype-btn" type="submit">See Project</button>
+          </div>
         </div>
-      </div>
 
-      <div class="project one card-1">
-        <div class="pro-layer">  
-          <h3 class="sub-pro">Professional Art Printing Data</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
+        <div class="project one card-1">
+          <div class="pro-layer">  
+            <h3 class="sub-pro">Professional Art Printing Data</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg">
+            <button type="submit">See Project</button>
+          </div>
         </div>
-        <div class="btn-bg cursor-hover-bg">
-          <button type="submit">See Project</button>
-        </div>
-      </div>
 
-      <div class="project two card-2">
-        <div class="pro-layer">  
-          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
-          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
+        <div class="project two card-2">
+          <div class="pro-layer">  
+            <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+            <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg">
+            <button type="submit">See Project</button>
+          </div>
         </div>
-        <div class="btn-bg cursor-hover-bg">
-          <button type="submit">See Project</button>
-        </div>
-      </div>
 
-      <div class="project three card-3">
-        <div class="pro-layer web">  
-          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
-          <h3 class="sub-pro desk-only">Website Portfolio</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
+        <div class="project three card-3">
+          <div class="pro-layer web">  
+            <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+            <h3 class="sub-pro desk-only">Website Portfolio</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg rem">
+            <button type="submit">See Project</button>
+          </div>
         </div>
-        <div class="btn-bg cursor-hover-bg rem">
-          <button type="submit">See Project</button>
-        </div>
-      </div>
 
-      <div class="project four card-1">
-        <div class="pro-layer">  
-          <h3 class="sub-pro">Professional Art Printing Data</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
+        <div class="project four card-1">
+          <div class="pro-layer">  
+            <h3 class="sub-pro">Professional Art Printing Data</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg">
+            <button type="submit">See Project</button>
+          </div>
         </div>
-        <div class="btn-bg cursor-hover-bg">
-          <button type="submit">See Project</button>
-        </div>
-      </div>
 
-      <div class="project five card-2">
-        <div class="pro-layer">  
-          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
-          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
+        <div class="project five card-2">
+          <div class="pro-layer">  
+            <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+            <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg">
+            <button type="submit">See Project</button>
+          </div>
         </div>
-        <div class="btn-bg cursor-hover-bg">
-          <button type="submit">See Project</button>
-        </div>
-      </div>
 
-      <div class="project six card-3">
-        <div class="pro-layer web">  
-          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
-          <h3 class="sub-pro desk-only">Website Portfolio</h3>
-          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
-            required has been the industry's standard.
-          </p>
-          <ul class="tech mob-only">
-            <li>css</li>
-            <li>html</li>
-            <li>bootstrap</li>
-          </ul>
-          <ul class="tech desk-only">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
-        </div>
-        <div class="btn-bg cursor-hover-bg rem">
-          <button type="submit">See Project</button>
+        <div class="project six card-3">
+          <div class="pro-layer web">  
+            <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+            <h3 class="sub-pro desk-only">Website Portfolio</h3>
+            <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+              required has been the industry's standard.
+            </p>
+            <ul class="tech mob-only">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+            </ul>
+            <ul class="tech desk-only">
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+          </div>
+          <div class="btn-bg cursor-hover-bg rem">
+            <button type="submit">See Project</button>
+          </div>
         </div>
       </div>
     </div>
@@ -254,7 +258,7 @@
             </ul>
         </div>
       </div>
-    </div>
+      </div>
   </section>
 
   <section class="sect-container" id="contact-section">
