MOdal Logic started

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <hr class="inline-hr">
       </div>
     </div>
+      <div class="pop"></div>
       <div class="container" id="project-container">
       
     </div>
