Update modal popup logic for smooth toggling experience

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <input type="email" class="font-style" name="email" id="email-mobile" placeholder="Email address" required>
         <hr class="form-line">
         <textarea id="textarea-mobile" class="font-style" name="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
-        <button>Get in touch</button>
+        <button class="cotact-btn">Get in touch</button>
       </form>
 
       <form class="desk-only" id="lg-screen" action="https://formspree.io/f/mrgjojra" method="post">
