Setup form Validation to prune email addresses

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         <input type="email" class="font-style" name="email" id="email-mobile" placeholder="Email address" required>
         <hr class="form-line">
         <textarea id="textarea-mobile" class="font-style" name="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
-        <button class="cotact-btn">Get in touch</button>
+        <button class="contact-btn">Get in touch</button>
+        <div class="error-index"></div>
       </form>
 
       <form class="desk-only" id="lg-screen" action="https://formspree.io/f/mrgjojra" method="post">
@@ -125,6 +126,7 @@
         <textarea id="textarea" class="font-style" name="message" cols="30" rows="10" maxlength="500" required>Enter text here</textarea>
         <br>
         <button class="contact-btn">Get in touch</button>
+        <div class="error-index"></div>
       </form>
     </div>
     <hr id="br">
