--- a/index.html
+++ b/index.html
@@ -57,9 +57,160 @@
         <h2 class="recent-works">My Recent Works</h2>
         <hr class="inline-hr">
       </div>
-    </div>
-      <div class="pop"></div>
-      <div class="container" id="project-container"> 
+      
+      <div class="multi-post">
+        <img class="hype-img" src="images/hype-project.png" alt="project sample">
+        <div class="hype-container">  
+          <h3 class="hype-pro sub-pro">Multi-Post Stories</h3>
+          <p class="normal hype-pro">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+            took a standard dummy text.
+          </p>
+          <ul class="tech custom-tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button id="hype-btn" type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project one card-1">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project two card-2">
+        <div class="pro-layer">  
+          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project three card-3">
+        <div class="pro-layer web">  
+          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Website Portfolio</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg rem">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project four card-1">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project five card-2">
+        <div class="pro-layer">  
+          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
+
+      <div class="project six card-3">
+        <div class="pro-layer web">  
+          <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Website Portfolio</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech mob-only">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg cursor-hover-bg rem">
+          <button type="submit">See Project</button>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -103,21 +254,28 @@
             </ul>
         </div>
       </div>
-      </div>
+    </div>
   </section>
 
   <section class="sect-container" id="contact-section">
     <div class="contact-form">
       <p class="normal form-para">I'm always interested in hearing about new projects, so if you'd like to chat please do get in touch.</p>
-      <form class="form" action="https://formspree.io/f/mrgjojra" method="post">
-        <input type="text" class="font-style" name="fullname" id="fullname" placeholder="Ful Name" maxlength="30" required>
+      <form class="mob-only" action="https://formspree.io/f/mrgjojra" method="post">
+        <input type="text" class="font-style" name="fullname" id="fullname" placeholder="Full name" maxlength="30" required>
         <hr class="form-line">
-        <input type="email" class="font-style" name="email" value="Emamm@gmail.com" id="email" placeholder="Email address" required><br>
+        <input type="email" class="font-style" name="email" id="email-mobile" placeholder="Email address" required>
         <hr class="form-line">
+        <textarea id="textarea-mobile" class="font-style" name="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
+        <button>Get in touch</button>
+      </form>
+
+      <form class="desk-only" id="lg-screen" action="https://formspree.io/f/mrgjojra" method="post">
+        <input type="text" class="font-style" name="firstname" id="firstname" placeholder="First Name" maxlength="30" required>
+        <input type="text" class="font-style" name="lastname" id="lastname" placeholder="Last Name" maxlength="30" required><br>
+        <input type="email" class="font-style" name="email" id="email" placeholder="Email address" required><br>
         <textarea id="textarea" class="font-style" name="message" cols="30" rows="10" maxlength="500" required>Enter text here</textarea>
         <br>
         <button class="contact-btn">Get in touch</button>
-        <div class="error-index"></div>
       </form>
     </div>
     <hr id="br">
